removed bar from about page added a temp gutter vector image fixed gap on bottom of team cards changed background and font colors for about page

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -5,10 +5,12 @@ body {
     font-family: 'Fjalla One', sans-serif;
     margin: 0 auto;
     background-color: white;
+    background-image: url('https://i.pinimg.com/originals/e0/4e/4f/e04e4fdf4088b3917e1fc3afd8c4e170.jpg');
     height: 100vh;
     -webkit-overflow-scrolling: touch;
 
-    @media screen and (max-width: 420px){
+    @media screen and (max-width: 1000px){
+        background-image: none;
         background-color: #182027;
     }
 
